--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; vertical-align: baseline; }
 
 body, html { height: 100%; }
@@ -47,8 +48,19 @@ a { text-decoration: none; }
 
 .l-main { -moz-transition: -moz-transform 0.2s linear; -o-transition: -o-transform 0.2s linear; -webkit-transition: -webkit-transform 0.2s linear; transition: transform 0.2s linear; }
 
+.l-cols { *zoom: 1; background: #e7e1dc; }
+.l-cols:after { content: " "; display: table; clear: both; }
+
+.l-col-left { float: left; width: 76%; background: #f8f5f3; }
+.l-col-left img { margin: 0 auto; max-width: 100%; height: auto; }
+
+.l-col-right { overflow: hidden; }
+
 .title { margin: 111px 0 25px; font-size: 36px; font-family: "geometria-extablack", Arial, sans-serif; color: #6e5b50; text-align: center; letter-spacing: 5px; }
 @media only screen and (max-width: 768px) { .title { font-size: 25px; margin: 93px 0 25px; } }
+
+.subtitle { margin: 25px 0 25px; font-size: 36px; font-family: "geometria-bold", Arial, sans-serif; color: #6e5b50; text-align: center; }
+@media only screen and (max-width: 768px) { .subtitle { font-size: 25px; margin: 93px 0 25px; } }
 
 .to-center { text-align: center; }
 
@@ -61,6 +73,7 @@ a { text-decoration: none; }
 @media only screen and (max-width: 960px) { .header__link { font-size: 12px; } }
 @media only screen and (max-width: 768px) { .header__link { display: none; } }
 .header__link:hover { text-decoration: none; color: #73bedf; }
+.header__link.is-active { opacity: 0.3; }
 .header__logo { margin-left: 32px; background: url("../img/svg/logo.svg") no-repeat 0 0; width: 26px; height: 43px; display: inline-block; vertical-align: middle; font: 0/0 a; text-shadow: none; color: transparent; }
 @media only screen and (max-width: 960px) { .header__logo { margin: 0; } }
 .header__tel { color: #ff8433; font-size: 14px; font-family: "geometria-bold", Arial, sans-serif; }
@@ -112,8 +125,9 @@ a { text-decoration: none; }
 .scroll-down span { display: block; margin: 0 0 6px; }
 .scroll-down i { background: url("../img/svg/arr1.svg") no-repeat 0 0; width: 23px; height: 20px; display: inline-block; }
 
-.benefits-wrap { padding: 0 11%; text-align: justify; font-size: 0; }
+.benefits-wrap { padding: 93px 11% 0; text-align: justify; font-size: 0; }
 .benefits-wrap:after { content: ""; display: inline-block; width: 100%; height: 0; }
+.benefits-wrap .title { margin-top: 0; }
 .benefits-wrap + .to-center { margin-bottom: 64px; }
 @media only screen and (max-width: 768px) { .benefits-wrap + .to-center { margin: 9px 0 32px; } }
 
@@ -171,3 +185,70 @@ a { text-decoration: none; }
 .window__close:active { top: 12px; }
 .window .param-list { margin-bottom: 15px; text-align: left; }
 .window .link-action { margin-top: 24px; }
+
+.page-head { margin: 0 0 25px; }
+
+.article { overflow: hidden; padding: 0 14%; font-family: "celestepro", Arial, sans-serif; font-size: 18px; color: #aa9283; }
+.article p { margin-bottom: 18px; }
+.article img { float: left; margin: 12px 30px 12px 0; max-width: 100%; height: auto; }
+.article a { color: #234a5c; text-decoration: underline; }
+.article a:hover { text-decoration: none; }
+.article ol { margin-bottom: 18px; counter-reset: list1; }
+.article ol li { position: relative; padding-left: 15px; }
+.article ol li:before { content: ""; position: absolute; left: 0; top: 0; counter-increment: list1; content: counter(list1) ". "; }
+.article ul { margin-bottom: 18px; }
+.article ul li { position: relative; padding-left: 10px; font-family: "celestepro-ita", Arial, sans-serif; }
+.article ul li:before { content: "•"; position: absolute; left: 0; top: 0; }
+.article table th { padding: 4px 0; text-align: left; font-weight: normal; font-family: "geometria-medium", Arial, sans-serif; color: #6e5b50; }
+.article table td { padding: 4px 0; }
+
+.slider img { margin: 0; float: none; }
+
+.slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: none; -webkit-tap-highlight-color: transparent; }
+
+.slick-list { position: relative; overflow: hidden; display: block; margin: 0; padding: 0; }
+.slick-list:focus { outline: none; }
+.slick-list.dragging { cursor: pointer; cursor: hand; }
+
+.slick-slider .slick-list, .slick-track, .slick-slide, .slick-slide img { -webkit-transform: translate3d(0, 0, 0); -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
+
+.slick-track { position: relative; left: 0; top: 0; display: block; zoom: 1; }
+.slick-track:before, .slick-track:after { content: ""; display: table; }
+.slick-track:after { clear: both; }
+.slick-loading .slick-track { visibility: hidden; }
+
+.slick-slide { float: left; height: 100%; min-height: 1px; display: none; }
+[dir="rtl"] .slick-slide { float: right; }
+.slick-slide img { display: block; }
+.slick-slide.slick-loading img { display: none; }
+.slick-slide.dragging img { pointer-events: none; }
+.slick-initialized .slick-slide { display: block; }
+.slick-loading .slick-slide { visibility: hidden; }
+.slick-vertical .slick-slide { display: block; height: auto; border: 1px solid transparent; }
+
+.slick-prev, .slick-next { position: absolute; display: block; height: 20px; width: 20px; line-height: 0; font-size: 0; cursor: pointer; background: transparent; color: transparent; top: 50%; margin-top: -10px; padding: 0; border: none; outline: none; }
+.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus { outline: none; background: transparent; color: transparent; }
+.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before { opacity: 1; }
+.slick-prev.slick-disabled:before, .slick-next.slick-disabled:before { opacity: 0.25; }
+
+.slick-prev:before, .slick-next:before { font-size: 20px; line-height: 1; color: white; opacity: 0.75; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
+.slick-prev { left: -25px; }
+[dir="rtl"] .slick-prev { left: auto; right: -25px; }
+.slick-prev:before { content: "\2190"; }
+[dir="rtl"] .slick-prev:before { content: "\2192"; }
+
+.slick-next { right: -25px; }
+[dir="rtl"] .slick-next { left: -25px; right: auto; }
+.slick-next:before { content: "\2192"; }
+[dir="rtl"] .slick-next:before { content: "\2190"; }
+
+.slick-slider { margin-bottom: 30px; }
+
+.slick-dots { position: absolute; bottom: -45px; list-style: none; display: block; text-align: center; padding: 0; width: 100%; }
+.slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 0 5px; padding: 0; cursor: pointer; }
+.slick-dots li button { border: 0; background: transparent; display: block; height: 20px; width: 20px; outline: none; line-height: 0; font-size: 0; color: transparent; padding: 5px; cursor: pointer; }
+.slick-dots li button:hover, .slick-dots li button:focus { outline: none; }
+.slick-dots li button:hover:before, .slick-dots li button:focus:before { opacity: 1; }
+.slick-dots li button:before { position: absolute; top: 0; left: 0; content: "\2022"; width: 20px; height: 20px; font-size: 6px; line-height: 20px; text-align: center; color: black; opacity: 0.25; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+.slick-dots li.slick-active button:before { color: black; opacity: 0.75; }
