--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -55,8 +55,10 @@
 	i
 		+svg(arr1,23,20) 
 .benefits-wrap
-	padding: 0 11%
+	padding: 93px 11% 0
 	+justify
+	.title
+		margin-top: 0
 	+ .to-center
 		margin-bottom: 64px
 		+r(768)
