--- a/css/screen.css
+++ b/css/screen.css
@@ -36,7 +36,7 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 html.has-open-nav { overflow: hidden; }
 html.has-open-nav body { overflow: hidden; }
 html.has-open-nav .l-main, html.has-open-nav .header, html.has-open-nav .nav { -moz-transform: translateX(266px); -ms-transform: translateX(266px); -webkit-transform: translateX(266px); transform: translateX(266px); }
-html.has-open-nav .l-main { box-shadow: 0 0 10px black; }
+html.has-open-nav .l-main { box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
 
 body { font-family: "celestepro", Arial, sans-serif; min-width: 320px; font-size: 18px; line-height: 1.3; background: #f8f5f3; -moz-transition: -moz-transform 0.2s linear; -o-transition: -o-transform 0.2s linear; -webkit-transition: -webkit-transform 0.2s linear; transition: transform 0.2s linear; }
 
@@ -48,19 +48,21 @@ a { text-decoration: none; }
 
 .l-main { -moz-transition: -moz-transform 0.2s linear; -o-transition: -o-transform 0.2s linear; -webkit-transition: -webkit-transform 0.2s linear; transition: transform 0.2s linear; }
 
-.l-cols { *zoom: 1; background: #e7e1dc; }
+.l-cols { margin: 0 0 40px; *zoom: 1; background: #e7e1dc; }
 .l-cols:after { content: " "; display: table; clear: both; }
 
 .l-col-left { float: left; width: 76%; background: #f8f5f3; }
+@media only screen and (max-width: 768px) { .l-col-left { width: 100%; } }
 .l-col-left img { margin: 0 auto; max-width: 100%; height: auto; }
 
-.l-col-right { overflow: hidden; }
+.l-col-right { padding-top: 65px; overflow: hidden; }
+@media only screen and (max-width: 768px) { .l-col-right { display: none; } }
 
 .title { margin: 111px 0 25px; font-size: 36px; font-family: "geometria-extablack", Arial, sans-serif; color: #6e5b50; text-align: center; letter-spacing: 5px; }
 @media only screen and (max-width: 768px) { .title { font-size: 25px; margin: 93px 0 25px; } }
 
-.subtitle { margin: 25px 0 25px; font-size: 36px; font-family: "geometria-bold", Arial, sans-serif; color: #6e5b50; text-align: center; }
-@media only screen and (max-width: 768px) { .subtitle { font-size: 25px; margin: 93px 0 25px; } }
+.subtitle { margin: 93px 0 25px; font-size: 36px; font-family: "geometria-bold", Arial, sans-serif; color: #6e5b50; text-align: center; }
+@media only screen and (max-width: 768px) { .subtitle { font-size: 25px; margin: 25px 0; } }
 
 .to-center { text-align: center; }
 
@@ -78,8 +80,8 @@ a { text-decoration: none; }
 @media only screen and (max-width: 960px) { .header__logo { margin: 0; } }
 .header__tel { color: #ff8433; font-size: 14px; font-family: "geometria-bold", Arial, sans-serif; }
 @media only screen and (max-width: 960px) { .header__tel { font-size: 12px; } }
-.header__tel button { background: url("../img/svg/tel.svg") no-repeat 0 0; width: 25px; height: 29px; display: inline-block; display: none; }
-@media only screen and (max-width: 768px) { .header__tel button { display: block; } }
+.header__tel a { background: url("../img/svg/tel.svg") no-repeat 0 0; width: 25px; height: 29px; display: inline-block; display: none; }
+@media only screen and (max-width: 768px) { .header__tel a { display: block; } }
 @media only screen and (max-width: 768px) { .header__tel span { display: none; } }
 .header__nav-key { background: url("../img/svg/nav.svg") no-repeat 0 0; width: 25px; height: 23px; display: inline-block; display: none; }
 @media only screen and (max-width: 780px) { .header__nav-key { display: inline-block; vertical-align: middle; } }
@@ -189,25 +191,49 @@ a { text-decoration: none; }
 .page-head { margin: 0 0 25px; }
 
 .article { overflow: hidden; padding: 0 14%; font-family: "celestepro", Arial, sans-serif; font-size: 18px; color: #aa9283; }
+@media only screen and (max-width: 960px) { .article { padding: 0 20px; } }
+@media only screen and (max-width: 768px) { .article { padding: 0 10px; } }
+.article h1, .article h2, .article h3, .article h4, .article h5, .article h6 { font-weight: normal; color: #6e5b50; font-family: "geometria-bold", Arial, sans-serif; }
+.article h2 { margin: 44px 0 15px; text-align: center; font-size: 32px; }
+.article h3 { margin: 44px 0 15px; font-size: 24px; }
 .article p { margin-bottom: 18px; }
+.article strong, .article b { font-weight: normal; font-family: "celestepro-bold", Arial, sans-serif; color: #6e5b50; }
+.article em, .article i { font-weight: normal; font-family: "celestepro-ita", Arial, sans-serif; }
 .article img { float: left; margin: 12px 30px 12px 0; max-width: 100%; height: auto; }
+@media only screen and (max-width: 480px) { .article img { float: none; margin: 12px 0; } }
 .article a { color: #234a5c; text-decoration: underline; }
 .article a:hover { text-decoration: none; }
+.article a img { float: none; }
 .article ol { margin-bottom: 18px; counter-reset: list1; }
 .article ol li { position: relative; padding-left: 15px; }
 .article ol li:before { content: ""; position: absolute; left: 0; top: 0; counter-increment: list1; content: counter(list1) ". "; }
 .article ul { margin-bottom: 18px; }
 .article ul li { position: relative; padding-left: 10px; font-family: "celestepro-ita", Arial, sans-serif; }
 .article ul li:before { content: "•"; position: absolute; left: 0; top: 0; }
+.article table { margin-bottom: 34px; }
 .article table th { padding: 4px 0; text-align: left; font-weight: normal; font-family: "geometria-medium", Arial, sans-serif; color: #6e5b50; }
 .article table td { padding: 4px 0; }
+.article .slick-slider { margin: 34px 0 43px; text-align: center; }
+.article .slick-slider img { margin: 0; display: inline-block; width: auto; float: none; }
 
-.slider img { margin: 0; float: none; }
+.video { position: relative; overflow: hidden; }
+.video img { display: block; max-width: 100%; margin: 0 auto; float: none; }
+.video__play { position: absolute; top: 50%; left: 50%; margin: -42px 0 0 -42px; background: url("../img/svg/play.svg") no-repeat 0 0; width: 84px; height: 84px; display: inline-block; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; }
+.video__play:hover { opacity: 0.9; }
 
-.slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: none; -webkit-tap-highlight-color: transparent; }
+.article-item { border-bottom: 2px solid #c9bab0; padding: 20px; }
+.article-item.is-active { background: #f8f5f3; }
+.article-item.is-active a { color: #aa9283; }
+.article-item a { color: #234a5c; }
+.article-item a:hover { text-decoration: underline; }
+.article-item__title { display: block; font-family: "geometria-bold", Arial, sans-serif; font-size: 20px; }
+.article-item__text { padding: 2px 0; font-size: 16px; }
+
+.slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: none; touch-action: none; -webkit-tap-highlight-color: transparent; }
 
 .slick-list { position: relative; overflow: hidden; display: block; margin: 0; padding: 0; }
 .slick-list:focus { outline: none; }
+.slick-loading .slick-list { background: white slick-image-url("ajax-loader.gif") center center no-repeat; }
 .slick-list.dragging { cursor: pointer; cursor: hand; }
 
 .slick-slider .slick-list, .slick-track, .slick-slide, .slick-slide img { -webkit-transform: translate3d(0, 0, 0); -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
@@ -218,7 +244,6 @@ a { text-decoration: none; }
 .slick-loading .slick-track { visibility: hidden; }
 
 .slick-slide { float: left; height: 100%; min-height: 1px; display: none; }
-[dir="rtl"] .slick-slide { float: right; }
 .slick-slide img { display: block; }
 .slick-slide.slick-loading img { display: none; }
 .slick-slide.dragging img { pointer-events: none; }
@@ -226,29 +251,20 @@ a { text-decoration: none; }
 .slick-loading .slick-slide { visibility: hidden; }
 .slick-vertical .slick-slide { display: block; height: auto; border: 1px solid transparent; }
 
-.slick-prev, .slick-next { position: absolute; display: block; height: 20px; width: 20px; line-height: 0; font-size: 0; cursor: pointer; background: transparent; color: transparent; top: 50%; margin-top: -10px; padding: 0; border: none; outline: none; }
-.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus { outline: none; background: transparent; color: transparent; }
-.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before { opacity: 1; }
-.slick-prev.slick-disabled:before, .slick-next.slick-disabled:before { opacity: 0.25; }
+.slick-prev, .slick-next { position: absolute; font: 0/0 a; text-shadow: none; color: transparent; top: 50%; margin-top: -14px; }
+.slick-prev:focus, .slick-next:focus { outline: none; }
+.slick-prev.slick-disabled, .slick-next.slick-disabled { opacity: 0.2; }
+.slick-prev:hover, .slick-next:hover { -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2); }
 
-.slick-prev:before, .slick-next:before { font-size: 20px; line-height: 1; color: white; opacity: 0.75; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+.slick-prev { left: -87px; background: url("../img/svg/prev.svg") no-repeat 0 0; width: 38px; height: 28px; display: inline-block; }
+@media only screen and (max-width: 960px) { .slick-prev { left: 10px; } }
 
-.slick-prev { left: -25px; }
-[dir="rtl"] .slick-prev { left: auto; right: -25px; }
-.slick-prev:before { content: "\2190"; }
-[dir="rtl"] .slick-prev:before { content: "\2192"; }
+.slick-next { right: -87px; background: url("../img/svg/next.svg") no-repeat 0 0; width: 38px; height: 28px; display: inline-block; }
+@media only screen and (max-width: 960px) { .slick-next { right: 10px; } }
 
-.slick-next { right: -25px; }
-[dir="rtl"] .slick-next { left: -25px; right: auto; }
-.slick-next:before { content: "\2192"; }
-[dir="rtl"] .slick-next:before { content: "\2190"; }
-
-.slick-slider { margin-bottom: 30px; }
-
-.slick-dots { position: absolute; bottom: -45px; list-style: none; display: block; text-align: center; padding: 0; width: 100%; }
-.slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 0 5px; padding: 0; cursor: pointer; }
-.slick-dots li button { border: 0; background: transparent; display: block; height: 20px; width: 20px; outline: none; line-height: 0; font-size: 0; color: transparent; padding: 5px; cursor: pointer; }
-.slick-dots li button:hover, .slick-dots li button:focus { outline: none; }
-.slick-dots li button:hover:before, .slick-dots li button:focus:before { opacity: 1; }
-.slick-dots li button:before { position: absolute; top: 0; left: 0; content: "\2022"; width: 20px; height: 20px; font-size: 6px; line-height: 20px; text-align: center; color: black; opacity: 0.25; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
-.slick-dots li.slick-active button:before { color: black; opacity: 0.75; }
+.slick-dots { text-align: center; position: absolute; margin: 0; bottom: 0; left: 0; right: 0; }
+.slick-dots li { position: relative; display: inline-block; padding: 0 4px; }
+.slick-dots li.slick-active button { opacity: 0.3; box-shadow: none; }
+.slick-dots li:before { display: none; }
+.slick-dots button { display: block; width: 6px; height: 6px; background: white; -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); cursor: pointer; font: 0/0 a; text-shadow: none; color: transparent; border-radius: 50%; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; }
+.slick-dots button:hover { box-shadow: none; }
