--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -1,196 +1,139 @@
-// Default Variables
+$slick-font-path: "./fonts/" !default
+$slick-loader-path: "./" !default
 $slick-arrow-color: white !default
 $slick-dot-color: black !default
-$slick-dot-color-active: $slick-dot-color !default
 $slick-prev-character: "\2190" !default
 $slick-next-character: "\2192" !default
 $slick-dot-character: "\2022" !default
-$slick-dot-size: 6px !default
-$opacity-default: 0.75
-$opacity-on-hover: 1
-$opacity-not-active: 0.25
-
-// Slider
 
 .slick-slider
-  position: relative
-  display: block
-  box-sizing: border-box
-  -moz-box-sizing: border-box
-  -webkit-touch-callout: none
-  -webkit-user-select: none
-  -khtml-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-  -ms-touch-action: none
-  -webkit-tap-highlight-color: transparent
-
+	position: relative
+	display: block
+	box-sizing: border-box
+	-moz-box-sizing: border-box
+	-webkit-touch-callout: none
+	-webkit-user-select: none
+	-khtml-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
+	user-select: none
+	-ms-touch-action: none
+	touch-action: none
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+	// &.is-ready
+	// 	.slick-list
+	// 		visibility: visible
 .slick-list
-  position: relative
-  overflow: hidden
-  display: block
-  margin: 0
-  padding: 0
-  &:focus
-    outline: none
-  &.dragging
-    cursor: pointer
-    cursor: hand
+	position: relative
+	overflow: hidden
+	display: block
+	margin: 0
+	padding: 0
+	//visibility: hidden
+	&:focus
+		outline: none
+	.slick-loading &
+		background: white slick-image-url("ajax-loader.gif") center center no-repeat
+	&.dragging
+		cursor: pointer
+		cursor: hand
 
 .slick-slider .slick-list,
 .slick-track,
 .slick-slide,
 .slick-slide img
-  -webkit-transform: translate3d(0, 0, 0)
-  -moz-transform: translate3d(0, 0, 0)
-  -ms-transform: translate3d(0, 0, 0)
-  -o-transform: translate3d(0, 0, 0)
-  transform: translate3d(0, 0, 0)
+	-webkit-transform: translate3d(0, 0, 0)
+	-moz-transform: translate3d(0, 0, 0)
+	-ms-transform: translate3d(0, 0, 0)
+	-o-transform: translate3d(0, 0, 0)
+	transform: translate3d(0, 0, 0)
 
 .slick-track
-  position: relative
-  left: 0
-  top: 0
-  display: block
-  zoom: 1
-  &:before,
-  &:after
-    content: ""
-    display: table
-  &:after
-    clear: both
-  .slick-loading &
-    visibility: hidden
+	position: relative
+	left: 0
+	top: 0
+	display: block
+	zoom: 1
+	&:before,
+	&:after
+		content: ""
+		display: table
+	&:after
+		clear: both
+	.slick-loading &
+		visibility: hidden
 
 .slick-slide
-  float: left
-  height: 100%
-  min-height: 1px
-  [dir="rtl"] &
-    float: right
-  img
-    display: block
-  &.slick-loading img
-    display: none
-  display: none
-  &.dragging img
-    pointer-events: none
-  .slick-initialized &
-    display: block
-  .slick-loading &
-    visibility: hidden
-  .slick-vertical &
-    display: block
-    height: auto
-    border: 1px solid transparent
-
-// Arrows
+	float: left
+	height: 100%
+	min-height: 1px
+	img
+		display: block
+	&.slick-loading img
+		display: none
+	display: none
+	&.dragging img
+		pointer-events: none
+	.slick-initialized &
+		display: block
+	.slick-loading &
+		visibility: hidden
+	.slick-vertical &
+		display: block
+		height: auto
+		border: 1px solid transparent
 
 .slick-prev,
 .slick-next
-  position: absolute
-  display: block
-  height: 20px
-  width: 20px
-  line-height: 0
-  font-size: 0
-  cursor: pointer
-  background: transparent
-  color: transparent
-  top: 50%
-  margin-top: -10px
-  padding: 0
-  border: none
-  outline: none
-  &:hover, &:focus
-    outline: none
-    background: transparent
-    color: transparent
-    &:before
-      opacity: $opacity-on-hover
-  &.slick-disabled:before
-    opacity: $opacity-not-active
-
-.slick-prev:before, .slick-next:before
-  font-size: 20px
-  line-height: 1
-  color: $slick-arrow-color
-  opacity: $opacity-default
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
-
+	position: absolute
+	+hide-text
+	top: 50%
+	margin-top: -14px
+	&:focus
+		outline: none
+	&.slick-disabled
+		opacity: 0.2
+	&:hover
+		+scale(1.2)
 .slick-prev
-  left: -25px
-  [dir="rtl"] &
-    left: auto
-    right: -25px
-  &:before
-    content: $slick-prev-character
-    [dir="rtl"] &
-      content: $slick-next-character
-
+	left: -87px
+	+svg(prev,38,28)
+	+r(960)
+		left: 10px	
 .slick-next
-  right: -25px
-  [dir="rtl"] &
-    left: -25px
-    right: auto
-  &:before
-    content: $slick-next-character
-    [dir="rtl"] &
-      content: $slick-prev-character
-
-// Dots
-
-.slick-slider
-  margin-bottom: 30px
+	right: -87px
+	+svg(next,38,28)
+	+r(960)
+		right: 10px		
 
 .slick-dots
-  position: absolute
-  bottom: -45px
-  list-style: none
-  display: block
-  text-align: center
-  padding: 0
-  width: 100%
-  li
-    position: relative
-    display: inline-block
-    height: 20px
-    width: 20px
-    margin: 0 5px
-    padding: 0
-    cursor: pointer
-    button
-      border: 0
-      background: transparent
-      display: block
-      height: 20px
-      width: 20px
-      outline: none
-      line-height: 0
-      font-size: 0
-      color: transparent
-      padding: 5px
-      cursor: pointer
-      &:hover, &:focus
-        outline: none
-        &:before
-          opacity: $opacity-on-hover
-      &:before
-        position: absolute
-        top: 0
-        left: 0
-        content: $slick-dot-character
-        width: 20px
-        height: 20px
-        font-size: $slick-dot-size
-        line-height: 20px
-        text-align: center
-        color: $slick-dot-color
-        opacity: $opacity-not-active
-        -webkit-font-smoothing: antialiased
-        -moz-osx-font-smoothing: grayscale
-    &.slick-active button:before
-      color: $slick-dot-color-active
-      opacity: $opacity-default
+	text-align: center
+	position: absolute
+	margin: 0
+	bottom: 0
+	left: 0
+	right: 0
+	li
+		position: relative
+		display: inline-block
+		padding: 0 4px 
+		&.slick-active
+			button
+				opacity: 0.3
+				box-shadow: none
+		&:before
+			display: none 
+				 
+	button
+		display: block
+		width: 6px
+		height: 6px
+		background: #fff
+		+box-shadow(0 1px 5px rgba(0,0,0,.25))
+		cursor: pointer
+		+hide-text
+		border-radius: 50% 
+		+tr
+		&:hover
+			box-shadow: none
+	
