--- a/css/screen.css
+++ b/css/screen.css
@@ -252,15 +252,14 @@ a { text-decoration: none; }
 .slick-vertical .slick-slide { display: block; height: auto; border: 1px solid transparent; }
 
 .slick-prev, .slick-next { position: absolute; font: 0/0 a; text-shadow: none; color: transparent; top: 50%; margin-top: -14px; }
+@media only screen and (max-width: 960px) { .slick-prev, .slick-next { display: none; } }
 .slick-prev:focus, .slick-next:focus { outline: none; }
 .slick-prev.slick-disabled, .slick-next.slick-disabled { opacity: 0.2; }
 .slick-prev:hover, .slick-next:hover { -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2); }
 
 .slick-prev { left: -87px; background: url("../img/svg/prev.svg") no-repeat 0 0; width: 38px; height: 28px; display: inline-block; }
-@media only screen and (max-width: 960px) { .slick-prev { left: 10px; } }
 
 .slick-next { right: -87px; background: url("../img/svg/next.svg") no-repeat 0 0; width: 38px; height: 28px; display: inline-block; }
-@media only screen and (max-width: 960px) { .slick-next { right: 10px; } }
 
 .slick-dots { text-align: center; position: absolute; margin: 0; bottom: 0; left: 0; right: 0; }
 .slick-dots li { position: relative; display: inline-block; padding: 0 4px; }
