--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -69,6 +69,7 @@ $slick-dot-character: "\2022" !default
 	min-height: 1px
 	img
 		display: block
+		max-width: 100%
 	&.slick-loading img
 		display: none
 	display: none
