--- a/sass/lib/_sprites.sass
+++ b/sass/lib/_sprites.sass
@@ -48,7 +48,7 @@ $icons: sprite-map("icons/*.png", $spacing: 10px)
 =svg($name, $width, $height)
 	background: url("../img/svg/#{$name}.svg") no-repeat 0 0
 	//background-image: inline-image('icons/svg/'+$sprite+'.svg','image/svg'); // to switches sprites to base64, elegant
-	//+background-size(#{$width}px #{$height}px)
+	+background-size(#{$width}px #{$height}px)
 	width: #{$width}px
 	height: #{$height}px
 	display: inline-block
