--- a/css/screen.css
+++ b/css/screen.css
@@ -125,6 +125,9 @@ a { text-decoration: none; }
 .tab .link.is-active { color: white; background: #174053; border: 2px solid rgba(23, 64, 83, 0); }
 
 .tab_mobile { display: none; }
+.tab_mobile li { margin-right: 0; }
+.tab_mobile li:first-child .link { border-left-width: 2px; }
+.tab_mobile .link { border-left-width: 0; border-radius: 0; }
 @media only screen and (max-width: 768px) { .tab_mobile { display: block; width: 100%; } }
 
 .checkbox { position: relative; display: block; margin-bottom: 18px; cursor: pointer; *zoom: 1; }
