--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -86,7 +86,10 @@
     .link
         border-left-width: 0
         border-radius: 0
+        +r(768)
+            font-size: 12px
     +r(768)
+        padding: 0 20px 
         display: block
         width: 100%
 
@@ -176,6 +179,8 @@
         background: #f8f5f3 
         border-radius: 3px
         +tr
+        font-size: 16px
+        +greg 
         +placeholder
             font-size: 16px
             color: #aa9283
