--- a/sass/_inner.sass
+++ b/sass/_inner.sass
@@ -193,16 +193,18 @@
 		left: -177px
 		+svg(prev-w,38,28)
 		+r(760)
-			left: 0
-			top: 50px 
-			+svg(prev-w,19,14) 
+			display: none
+			// left: 0
+			// top: 50px 
+			// +svg(prev-w,19,14) 
 	.slick-next
 		right: -177px
 		+svg(next-w,38,28)
 		+r(760)
-			right: 0
-			top: 50px
-			+svg(next-w,19,14)
+			display: none
+			// right: 10px
+			// top: 50px
+			// +svg(next-w,19,14)
 
 .slider-plan
 	max-width: 906px
