--- a/css/screen.css
+++ b/css/screen.css
@@ -128,7 +128,8 @@ a { text-decoration: none; }
 .tab_mobile li { margin-right: 0; }
 .tab_mobile li:first-child .link { border-left-width: 2px; }
 .tab_mobile .link { border-left-width: 0; border-radius: 0; }
-@media only screen and (max-width: 768px) { .tab_mobile { display: block; width: 100%; } }
+@media only screen and (max-width: 768px) { .tab_mobile .link { font-size: 12px; } }
+@media only screen and (max-width: 768px) { .tab_mobile { padding: 0 20px; display: block; width: 100%; } }
 
 .checkbox { position: relative; display: block; margin-bottom: 18px; cursor: pointer; *zoom: 1; }
 .checkbox:after { content: " "; display: table; clear: both; }
@@ -148,7 +149,7 @@ a { text-decoration: none; }
 .submit:active { background: #07780e; }
 
 .input { position: relative; margin: 0 0 14px; }
-.input input { display: block; padding: 0 15px; height: 42px; width: 100%; background: #f8f5f3; border-radius: 3px; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; }
+.input input { display: block; padding: 0 15px; height: 42px; width: 100%; background: #f8f5f3; border-radius: 3px; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; font-size: 16px; font-family: "geometria", Arial, sans-serif; }
 .input input:-ms-input-placeholder { font-size: 16px; color: #aa9283; font-family: "geometria", Arial, sans-serif; }
 .input input:-moz-placeholder { font-size: 16px; color: #aa9283; font-family: "geometria", Arial, sans-serif; }
 .input input::-moz-placeholder { font-size: 16px; color: #aa9283; font-family: "geometria", Arial, sans-serif; }
@@ -157,7 +158,7 @@ a { text-decoration: none; }
 .input input:focus { background: white; }
 .input .submit { width: 100%; margin-top: 16px; }
 
-.top-section { position: relative; height: 100vh; min-height: 480px; overflow: hidden; text-align: center; background: url("../img/main-bg.jpg") 0 0 no-repeat; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; }
+.top-section { position: relative; height: 100vh; min-height: 540px; overflow: hidden; text-align: center; background: url("../img/main-bg.jpg") 0 0 no-repeat; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; }
 .top-section_slider:before { display: none; }
 .top-section .slick-slider { margin: 0 auto; width: 720px; }
 @media only screen and (max-width: 760px) { .top-section .slick-slider { width: 100%; } }
@@ -294,9 +295,9 @@ a { text-decoration: none; }
 @media only screen and (max-width: 760px) { .slider__info { display: none; } }
 .slider .slick-dots { bottom: -47px; }
 .slider .slick-prev { left: -177px; background: url("../img/svg/prev-w.svg") no-repeat 0 0; -moz-background-size: 38px 28px; -o-background-size: 38px 28px; -webkit-background-size: 38px 28px; background-size: 38px 28px; width: 38px; height: 28px; display: inline-block; }
-@media only screen and (max-width: 760px) { .slider .slick-prev { left: 0; top: 50px; background: url("../img/svg/prev-w.svg") no-repeat 0 0; -moz-background-size: 19px 14px; -o-background-size: 19px 14px; -webkit-background-size: 19px 14px; background-size: 19px 14px; width: 19px; height: 14px; display: inline-block; } }
+@media only screen and (max-width: 760px) { .slider .slick-prev { display: none; } }
 .slider .slick-next { right: -177px; background: url("../img/svg/next-w.svg") no-repeat 0 0; -moz-background-size: 38px 28px; -o-background-size: 38px 28px; -webkit-background-size: 38px 28px; background-size: 38px 28px; width: 38px; height: 28px; display: inline-block; }
-@media only screen and (max-width: 760px) { .slider .slick-next { right: 0; top: 50px; background: url("../img/svg/next-w.svg") no-repeat 0 0; -moz-background-size: 19px 14px; -o-background-size: 19px 14px; -webkit-background-size: 19px 14px; background-size: 19px 14px; width: 19px; height: 14px; display: inline-block; } }
+@media only screen and (max-width: 760px) { .slider .slick-next { display: none; } }
 
 .slider-plan { max-width: 906px; margin: 0 auto; }
 .slider-plan .slick-dots { bottom: -30px; }
