--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -63,7 +63,12 @@
 		display: block
 		margin: 0 0 6px 
 	i
-		+svg(arr1,23,20) 
+		+svg(arr1,27,24) 
+		-webkit-background-size: contain 
+		-o-background-size: contain 
+		background-size: contain 
+		background-color: red 
+		font-size: 0 
 .benefits-wrap
 	padding: 93px 11% 0
 	+justify
