--- a/css/screen.css
+++ b/css/screen.css
@@ -171,7 +171,7 @@ a { text-decoration: none; }
 .scroll-down { position: absolute; bottom: 42px; left: 0; right: 0; z-index: 2; font-size: 18px; }
 .scroll-down a { font-family: "celestepro-ita", Arial, sans-serif; color: white; }
 .scroll-down span { display: block; margin: 0 0 6px; }
-.scroll-down i { background: url("../img/svg/arr1.svg") no-repeat 0 0; -moz-background-size: 23px 20px; -o-background-size: 23px 20px; -webkit-background-size: 23px 20px; background-size: 23px 20px; width: 23px; height: 20px; display: inline-block; }
+.scroll-down i { background: url("../img/svg/arr1.svg") no-repeat 0 0; -moz-background-size: 27px 24px; -o-background-size: 27px 24px; -webkit-background-size: 27px 24px; background-size: 27px 24px; width: 27px; height: 24px; display: inline-block; -webkit-background-size: contain; -o-background-size: contain; background-size: contain; background-color: red; font-size: 0; }
 
 .benefits-wrap { padding: 93px 11% 0; text-align: justify; font-size: 0; }
 .benefits-wrap:after { content: ""; display: inline-block; width: 100%; height: 0; }
