correct fonts family

--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -56,23 +56,23 @@
 	 
 +font(celestepro, celestepro)  
 =creg
-	font-family: "celestepro", Arial, sans-serif 
+	font-family: "celestepro", Arial, serif 
 	
 +font(celestepro-bold, celestepro-bold)  
 =cbold
-	font-family: "celestepro-bold", Arial, sans-serif
+	font-family: "celestepro-bold", Arial, serif
 	 
 +font(celestepro-medium, celestepro-medium)  
 =cmed
-	font-family: "celestepro-medium", Arial, sans-serif 
+	font-family: "celestepro-medium", Arial, serif 
 	
 +font(celestepro-bookita, celestepro-bookita)  
 =cbook
-	font-family: "celestepro-bookita", Arial, sans-serif 
+	font-family: "celestepro-bookita", Arial, serif 
 	
 +font(celestepro-ita, celestepro-ita)  
 =cit
-	font-family: "celestepro-ita", Arial, sans-serif 
+	font-family: "celestepro-ita", Arial, serif 
 
 	
 $brown: #6e5b50 
