--- a/css/screen.css
+++ b/css/screen.css
@@ -38,7 +38,7 @@ html.has-open-nav body { overflow: hidden; }
 html.has-open-nav .l-main, html.has-open-nav .header, html.has-open-nav .nav { -moz-transform: translateX(266px); -ms-transform: translateX(266px); -webkit-transform: translateX(266px); transform: translateX(266px); }
 html.has-open-nav .l-main { box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
 
-body { font-family: "celestepro", Arial, sans-serif; min-width: 320px; font-size: 18px; line-height: 1.3; background: #f8f5f3; -moz-transition: -moz-transform 0.2s linear; -o-transition: -o-transform 0.2s linear; -webkit-transition: -webkit-transform 0.2s linear; transition: transform 0.2s linear; }
+body { font-family: "celestepro", Arial, serif; min-width: 320px; font-size: 18px; line-height: 1.3; background: #f8f5f3; -moz-transition: -moz-transform 0.2s linear; -o-transition: -o-transform 0.2s linear; -webkit-transition: -webkit-transform 0.2s linear; transition: transform 0.2s linear; }
 
 a { text-decoration: none; }
 
@@ -97,7 +97,7 @@ a { text-decoration: none; }
 .logo__icon { margin-bottom: 8px; background: url("../img/svg/logo-big.svg") no-repeat 0 0; -moz-background-size: 41px 65px; -o-background-size: 41px 65px; -webkit-background-size: 41px 65px; background-size: 41px 65px; width: 41px; height: 65px; display: inline-block; }
 .logo__title { margin-bottom: 7px; font-family: "geometria-extablack", Arial, sans-serif; font-size: 31px; font-weight: normal; letter-spacing: 4px; }
 .logo span { margin-bottom: 7px; text-transform: uppercase; display: block; font-family: "geometria-medium", Arial, sans-serif; font-size: 11px; }
-.logo em { display: block; line-height: 1.2; font-style: normal; font-family: "celestepro-ita", Arial, sans-serif; font-size: 12px; }
+.logo em { display: block; line-height: 1.2; font-style: normal; font-family: "celestepro-ita", Arial, serif; font-size: 12px; }
 
 .footer { margin: 0 auto; border-top: 2px solid rgba(170, 146, 131, 0.5); padding: 45px 0; max-width: 870px; text-align: center; color: #aa9283; font-size: 16px; line-height: 2.5; font-family: "geometria", Arial, sans-serif; }
 @media only screen and (max-width: 768px) { .footer { padding: 20px 0; } }
@@ -169,7 +169,7 @@ a { text-decoration: none; }
 .top-section__title span { display: inline-block; max-width: 560px; }
 
 .scroll-down { position: absolute; bottom: 42px; left: 0; right: 0; z-index: 2; font-size: 18px; }
-.scroll-down a { font-family: "celestepro-ita", Arial, sans-serif; color: white; }
+.scroll-down a { font-family: "celestepro-ita", Arial, serif; color: white; }
 .scroll-down span { display: block; margin: 0 0 6px; }
 .scroll-down i { background: url("../img/svg/arr3.svg") no-repeat 0 0; -moz-background-size: 27px 24px; -o-background-size: 27px 24px; -webkit-background-size: 27px 24px; background-size: 27px 24px; width: 27px; height: 24px; display: inline-block; -webkit-background-size: contain; -o-background-size: contain; background-size: contain; font-size: 0; }
 
@@ -204,7 +204,7 @@ a { text-decoration: none; }
 .project .param-list { margin-bottom: 23px; }
 
 .param-list { font-family: "geometria-bold", Arial, sans-serif; line-height: 1.6; text-align: left; }
-.param-list span { display: inline-block; vertical-align: middle; width: 50%; padding-right: 10px; font-size: 16px; font-family: "celestepro", Arial, sans-serif; }
+.param-list span { display: inline-block; vertical-align: middle; width: 50%; padding-right: 10px; font-size: 16px; font-family: "celestepro", Arial, serif; }
 
 .plan { margin-bottom: 45px; padding: 0 5%; text-align: center; }
 @media only screen and (max-width: 900px) { .plan { padding: 0 20px; } }
@@ -243,15 +243,15 @@ a { text-decoration: none; }
 
 .page-head { margin: 0 0 25px; }
 
-.article { overflow: hidden; padding: 0 14%; font-family: "celestepro", Arial, sans-serif; font-size: 18px; color: #aa9283; }
+.article { overflow: hidden; padding: 0 14%; font-family: "celestepro", Arial, serif; font-size: 18px; color: #aa9283; }
 @media only screen and (max-width: 960px) { .article { padding: 0 20px; } }
 @media only screen and (max-width: 768px) { .article { padding: 0 10px; } }
 .article h1, .article h2, .article h3, .article h4, .article h5, .article h6 { font-weight: normal; color: #6e5b50; font-family: "geometria-bold", Arial, sans-serif; }
 .article h2 { margin: 44px 0 15px; text-align: center; font-size: 32px; }
 .article h3 { margin: 44px 0 15px; font-size: 24px; }
 .article p { margin-bottom: 18px; }
-.article strong, .article b { font-weight: normal; font-family: "celestepro-bold", Arial, sans-serif; color: #6e5b50; }
-.article em, .article i { font-weight: normal; font-family: "celestepro-ita", Arial, sans-serif; }
+.article strong, .article b { font-weight: normal; font-family: "celestepro-bold", Arial, serif; color: #6e5b50; }
+.article em, .article i { font-weight: normal; font-family: "celestepro-ita", Arial, serif; }
 .article img { float: left; margin: 12px 30px 12px 0; max-width: 100%; height: auto; }
 @media only screen and (max-width: 480px) { .article img { float: none; margin: 12px 0; } }
 .article a { color: #234a5c; text-decoration: underline; }
@@ -261,7 +261,7 @@ a { text-decoration: none; }
 .article ol li { position: relative; padding-left: 15px; }
 .article ol li:before { content: ""; position: absolute; left: 0; top: 0; counter-increment: list1; content: counter(list1) ". "; }
 .article ul { margin-bottom: 18px; }
-.article ul li { position: relative; padding-left: 10px; font-family: "celestepro-ita", Arial, sans-serif; }
+.article ul li { position: relative; padding-left: 10px; font-family: "celestepro-ita", Arial, serif; }
 .article ul li:before { content: "•"; position: absolute; left: 0; top: 0; }
 .article table { margin-bottom: 34px; }
 .article table th { padding: 4px 0; text-align: left; font-weight: normal; font-family: "geometria-medium", Arial, sans-serif; color: #6e5b50; }
@@ -324,7 +324,7 @@ a { text-decoration: none; }
 @media only screen and (max-width: 900px) { .sections__table { display: none; } }
 
 .table { display: table; width: 100%; margin: 0 0 20px; border: 2px solid white; font-size: 19px; font-family: "geometria-medium", Arial, sans-serif; }
-.table_head { border: 0; font-family: "celestepro", Arial, sans-serif; font-size: 16px; }
+.table_head { border: 0; font-family: "celestepro", Arial, serif; font-size: 16px; }
 .table_head .table__cell { vertical-align: top; }
 .table.is-inactive { opacity: 0.3; }
 .table.is-active { background: white; color: #ff8433; }
@@ -352,7 +352,7 @@ a { text-decoration: none; }
 .credit { color: #aa9283; text-align: center; }
 .credit__info { margin-bottom: 27px; font-size: 20px; }
 @media only screen and (max-width: 760px) { .credit__info { font-size: 16px; } }
-.credit__item { float: left; margin-bottom: 40px; width: 33.3%; font-size: 22px; font-family: "celestepro-ita", Arial, sans-serif; }
+.credit__item { float: left; margin-bottom: 40px; width: 33.3%; font-size: 22px; font-family: "celestepro-ita", Arial, serif; }
 @media only screen and (max-width: 760px) { .credit__item { font-size: 16px; } }
 @media only screen and (max-width: 480px) { .credit__item { float: none; padding: 0 20px; width: 100%; } }
 .credit__price { font-family: "geometria-bold", Arial, sans-serif; color: #6e5b50; font-size: 33px; }
@@ -380,7 +380,7 @@ a { text-decoration: none; }
 .opt .opt__col1 .opt__title { width: 80%; }
 .opt .opt__col2 { float: right; width: 160px; }
 @media only screen and (max-width: 760px) { .opt .opt__col2 { width: 100px; } }
-.opt__title { margin-bottom: 20px; border-bottom: 1px solid; padding-bottom: 8px; font-size: 16px; font-family: "celestepro", Arial, sans-serif; }
+.opt__title { margin-bottom: 20px; border-bottom: 1px solid; padding-bottom: 8px; font-size: 16px; font-family: "celestepro", Arial, serif; }
 .opt__total { border-top: 1px solid #aa9283; padding: 22px 0 0; *zoom: 1; font-size: 19px; font-family: "geometria-medium", Arial, sans-serif; color: #6e5b50; }
 .opt__total:after { content: " "; display: table; clear: both; }
 .opt .checkbox__title { padding-right: 180px; }
